fix overflow bug ;)

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -64,7 +64,7 @@ body {
     padding: 0;
     margin: 0;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .container, .sub-container {
